<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="p_ModbusTx_PLCMemory" Id="{1375f286-8a4d-4ae5-8ad4-ba6b3a50bbf6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_ModbusTx_PLCMemory
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*mb_PLC_Memory[0]-[99] PLC aiFloat inputs *)


MEMCPY(destAddr:=ADR(mb_PLC_Memory[10]), srcAddr:=ADR(vgPBT_GCC_02.rPRESS), n:=SIZEOF(vgPBT_GCC_02.rPRESS));  //VG pressure readbacks
MEMCPY(destAddr:=ADR(mb_PLC_Memory[12]), srcAddr:=ADR(vgPBT_GPI_02.rPRESS), n:=SIZEOF(vgPBT_GPI_02.rPRESS));  //VG pressure readbacks

MEMCPY(destAddr:=ADR(mb_PLC_Memory[14]), srcAddr:=ADR(vgPBT_GCC_04.rPRESS), n:=SIZEOF(vgPBT_GCC_04.rPRESS));  //VG pressure readbacks
MEMCPY(destAddr:=ADR(mb_PLC_Memory[16]), srcAddr:=ADR(vgPBT_GPI_04.rPRESS), n:=SIZEOF(vgPBT_GPI_04.rPRESS));  //VG pressure readbacks

MEMCPY(destAddr:=ADR(mb_PLC_Memory[18]), srcAddr:=ADR(vgPBT_GCC_06.rPRESS), n:=SIZEOF(vgPBT_GCC_06.rPRESS));  //VG pressure readbacks
MEMCPY(destAddr:=ADR(mb_PLC_Memory[20]), srcAddr:=ADR(vgPBT_GPI_06.rPRESS), n:=SIZEOF(vgPBT_GPI_06.rPRESS));  //VG pressure readbacks

MEMCPY(destAddr:=ADR(mb_PLC_Memory[22]), srcAddr:=ADR(vgPBT_GCC_07.rPRESS), n:=SIZEOF(vgPBT_GCC_07.rPRESS));  //VG pressure readbacks
MEMCPY(destAddr:=ADR(mb_PLC_Memory[24]), srcAddr:=ADR(vgPBT_GPI_07.rPRESS), n:=SIZEOF(vgPBT_GPI_07.rPRESS));  //VG pressure readbacks

MEMCPY(destAddr:=ADR(mb_PLC_Memory[26]), srcAddr:=ADR(vgPBT_GCC_09.rPRESS), n:=SIZEOF(vgPBT_GCC_09.rPRESS));  //VG pressure readbacks
MEMCPY(destAddr:=ADR(mb_PLC_Memory[28]), srcAddr:=ADR(vgPBT_GPI_09.rPRESS), n:=SIZEOF(vgPBT_GPI_09.rPRESS));  //VG pressure readbacks
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>